Update bakong payment